--- a/views/src/assets/styles/globalStyles.styl
+++ b/views/src/assets/styles/globalStyles.styl
@@ -1,7 +1,8 @@
-html, body, p
+html, body, p, h1, h3, h5
   margin 0
   padding 0
-  font-size 12px
+p, span, div
+  font-size 14px
 a
   text-decoration none
 .icon
@@ -9,6 +10,10 @@ a
   height 1em
   vertical-align -0.15em
   fill currentColor
+  overflow hidden
+.ellipsis
+  display -webkit-box
+  -webkit-box-orient vertical
   overflow hidden
 [aspectratio]
   position relative
