--- a/views/src/assets/font/demo_index.html
+++ b/views/src/assets/font/demo_index.html
@@ -49,6 +49,12 @@
               </li>
           
             <li class="dib">
+              <span class="icon iconfont">&#xe604;</span>
+                <div class="name">搜索</div>
+                <div class="code-name">&amp;#xe604;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfont">&#xe60c;</span>
                 <div class="name">评论</div>
                 <div class="code-name">&amp;#xe60c;</div>
@@ -76,6 +82,12 @@
               <span class="icon iconfont">&#xe621;</span>
                 <div class="name">点赞</div>
                 <div class="code-name">&amp;#xe621;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe645;</span>
+                <div class="name">写文章</div>
+                <div class="code-name">&amp;#xe645;</div>
               </li>
           
             <li class="dib">
@@ -174,6 +186,15 @@
           </li>
           
           <li class="dib">
+            <span class="icon iconfont icon-search"></span>
+            <div class="name">
+              搜索
+            </div>
+            <div class="code-name">.icon-search
+            </div>
+          </li>
+          
+          <li class="dib">
             <span class="icon iconfont icon-comment"></span>
             <div class="name">
               评论
@@ -215,6 +236,15 @@
               点赞
             </div>
             <div class="code-name">.icon-like
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-xiewenzhang"></span>
+            <div class="name">
+              写文章
+            </div>
+            <div class="code-name">.icon-xiewenzhang
             </div>
           </li>
           
@@ -300,6 +330,14 @@
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-search"></use>
+                </svg>
+                <div class="name">搜索</div>
+                <div class="code-name">#icon-search</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
                   <use xlink:href="#icon-comment"></use>
                 </svg>
                 <div class="name">评论</div>
@@ -336,6 +374,14 @@
                 </svg>
                 <div class="name">点赞</div>
                 <div class="code-name">#icon-like</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-xiewenzhang"></use>
+                </svg>
+                <div class="name">写文章</div>
+                <div class="code-name">#icon-xiewenzhang</div>
             </li>
           
             <li class="dib">
