--- a/views/src/assets/font/demo_index.html
+++ b/views/src/assets/font/demo_index.html
@@ -37,6 +37,12 @@
               </li>
           
             <li class="dib">
+              <span class="icon iconfont">&#xe610;</span>
+                <div class="name">对号</div>
+                <div class="code-name">&amp;#xe610;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfont">&#xe61e;</span>
                 <div class="name">Back Arrow</div>
                 <div class="code-name">&amp;#xe61e;</div>
@@ -46,6 +52,12 @@
               <span class="icon iconfont">&#xe62e;</span>
                 <div class="name">动态点击</div>
                 <div class="code-name">&amp;#xe62e;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe62f;</span>
+                <div class="name">关闭</div>
+                <div class="code-name">&amp;#xe62f;</div>
               </li>
           
             <li class="dib">
@@ -94,6 +106,12 @@
               <span class="icon iconfont">&#xe683;</span>
                 <div class="name">评论</div>
                 <div class="code-name">&amp;#xe683;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe637;</span>
+                <div class="name">图片</div>
+                <div class="code-name">&amp;#xe637;</div>
               </li>
           
             <li class="dib">
@@ -168,6 +186,15 @@
           </li>
           
           <li class="dib">
+            <span class="icon iconfont icon-right"></span>
+            <div class="name">
+              对号
+            </div>
+            <div class="code-name">.icon-right
+            </div>
+          </li>
+          
+          <li class="dib">
             <span class="icon iconfont icon-backArrow"></span>
             <div class="name">
               Back Arrow
@@ -182,6 +209,15 @@
               动态点击
             </div>
             <div class="code-name">.icon-moment
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont icon-close"></span>
+            <div class="name">
+              关闭
+            </div>
+            <div class="code-name">.icon-close
             </div>
           </li>
           
@@ -258,6 +294,15 @@
           </li>
           
           <li class="dib">
+            <span class="icon iconfont icon-tupian"></span>
+            <div class="name">
+              图片
+            </div>
+            <div class="code-name">.icon-tupian
+            </div>
+          </li>
+          
+          <li class="dib">
             <span class="icon iconfont icon-my"></span>
             <div class="name">
               我的-未选中
@@ -293,7 +338,7 @@
 <pre><code class="language-html">&lt;link rel="stylesheet" href="./iconfont.css"&gt;
 </code></pre>
         <h3 id="-">第二步：挑选相应图标并获取类名，应用于页面：</h3>
-<pre><code class="language-html">&lt;span class="iconfont icon--xxx"&gt;&lt;/span&gt;
+<pre><code class="language-html">&lt;span class="iconfont icon-xxx"&gt;&lt;/span&gt;
 </code></pre>
         <blockquote>
           <p>"
@@ -314,6 +359,14 @@
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-right"></use>
+                </svg>
+                <div class="name">对号</div>
+                <div class="code-name">#icon-right</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
                   <use xlink:href="#icon-backArrow"></use>
                 </svg>
                 <div class="name">Back Arrow</div>
@@ -326,6 +379,14 @@
                 </svg>
                 <div class="name">动态点击</div>
                 <div class="code-name">#icon-moment</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-close"></use>
+                </svg>
+                <div class="name">关闭</div>
+                <div class="code-name">#icon-close</div>
             </li>
           
             <li class="dib">
@@ -390,6 +451,14 @@
                 </svg>
                 <div class="name">评论</div>
                 <div class="code-name">#icon-pinglun</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#icon-tupian"></use>
+                </svg>
+                <div class="name">图片</div>
+                <div class="code-name">#icon-tupian</div>
             </li>
           
             <li class="dib">
